infra/global/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-route
  namespace: r-clone
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`guliguli.work`) && PathPrefix(`/api/auth`)
      priority: 2
      services:
        - kind: Service
          name: auth
          port: 8080

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
  namespace: r-clone
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`guliguli.work`) && PathPrefix(`/`)
      priority: 1
      services:
        - kind: Service
          name: frontend
          port: 3000
    - kind: Rule
      match: Host(`guliguli.work`) && PathPrefix(`/config`)
      services:
        - kind: Service
          name: frontend
          port: 8080
---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: r-clone
spec:
  forwardAuth:
    address: "http://auth/api/auth/verify"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: r-clone
spec:
  forwardAuth:
    address: "http://auth/api/auth/verify"
